# BaroqueTechnologies

./: .gitignore  main.py  pyproject.toml
afml/: run_pipeline.py
afml/data_structuring/: bars.py
afml/docs/: production_chain.md
afml/evaluation_pipeline/: cv.py
afml/feature_library/: features.py
afml/labeling/: triple_barrier.py
afml/notebooks/chapters/01_DataAnalysis/: chapter2.ipynb  summaryChapter2.md
afml/weighting_stationarity/: weighting.py
baroque/: CONTEXT.md  README.md  main.py  pyproject.toml
baroque/docs/: CHANGELOG.md
baroque/docs/roadmaps/: quant_research_platform_roadmap.md
baroque/docs/strategies/: rsi_atr_stop_strategy.md
baroque/docs/strategies/crypto/btc/: rsi_atr_stop_backtest_plan.md  rsi_atr_stop_strategy.md
baroque/src/config/data/: btc_data_config.yaml  data_config.yaml
baroque/src/config/strategies/crypto/btc/: rsi_atr_stop_strategy.yaml
baroque/src/data/data_engineering/: config_loader.py  data_cleaning.py
baroque/src/data/data_engineering/strategies/mean_reversion/rsi_btc/: rsi_btc.py
baroque/src/data/data_ingest/: config_loader.py  ingest_data.py
baroque/src/data/data_ingest/providers/: __init__.py  alpaca.py  base.py  binance.py
baroque/src/playground/data/: data_analyzation.ipynb
baroque/src/playground/strategies/mean_reversion/rsi_btc/: rsi_btc.ipynb
baroque/src/strategies/mean_reversion/rsi_btc/: rsi_btc.ipynb
