[project]
name = "baroque"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "pandas>=2.2",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
